--- a/style.css
+++ b/style.css
@@ -35,6 +35,8 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  animation-name: shade;
+  animation-duration: 1s;
 }
 
 .hover{
@@ -51,13 +53,18 @@
   height: 15%;
   top: 3%;
   left: 65%;
-  background-color: rgb(226, 28, 28);
+  background-color: rgba(226, 28, 28, 0.60);
   border-radius: 40px;
   border: none;
   color: rgb(255,255,255);
   font-size: 1.5em;
   animation-name: savebtn;
   animation-duration: 1s;
+  transition: 0.3s;
+}
+
+#savebtn:hover{
+  background-color: rgb(226, 28, 28);
 }
 
 #btnbottom{
@@ -72,7 +79,7 @@
 
 #search{
   border: none;
-  background-color: rgb(235, 237, 237);
+  background-color: rgb(235, 237, 237, 0.70);
   border-radius: 40px;
   width: 50%;
   height: 100%;
@@ -97,8 +104,13 @@
   margin-inline: 10px;
 }
 
-#savebtn:hover, #search:hover, .icon:hover{
+#savebtn:hover{
   cursor: pointer;
+}
+
+#search:hover, .icon:hover{
+  cursor: pointer;
+  background-color: rgba(235, 237, 237);
 }
 
 @keyframes savebtn {
@@ -109,4 +121,9 @@
 @keyframes btnbottom {
   0%   {bottom:0%;}
   100% {bottom:3%;}
+}
+
+@keyframes shade {
+  0% {display: none;}
+  100% {display: block;}
 }
