--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@
   width: 100%;
   height: 100%;
   animation-name: shade;
-  animation-duration: 1s;
+  animation-duration: 0.3s;
 }
 
 .hover{
@@ -124,6 +124,6 @@
 }
 
 @keyframes shade {
-  0% {display: none;}
-  100% {display: block;}
+  0% {opacity: 0;}
+  100% {opacity: 1;}
 }
